--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 <h2>Test site for IFrame local</h2>
 
-<iframe src="https://www.myweb.internal/" height="200" width="300" title="inner frame"></iframe>
+<iframe src="https://1ymk8s3.deerfield.aim.local/" height="200" width="300" title="inner frame"></iframe>
 
 </body>
 </html>
